--- a/AboutMe.html
+++ b/AboutMe.html
@@ -20,16 +20,16 @@
     <a class="nav-link" href="index.html">Home</a>
      </li>
      <li class="nav-item">
-      <a class="nav-link active" href="aboutme.html">About</a>
+      <a class="nav-link active" href="AboutMe.html">About</a>
       </li>
       <li class="nav-item">
        <a class="nav-link" href="contact.html">Contact</a>
        </li>
        <li class="nav-item">
-        <a class="nav-link" href="work.html">Work Gallery</a>
+        <a class="nav-link" href="Work.html">Work Gallery</a>
         </li>
         <li class="nav-item">
-         <a class="nav-link" href="resume.html">Resume</a>
+         <a class="nav-link" href="Resume.html">Resume</a>
          </li>
     </ul>
   </nav>
