--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <a class="nav-link" href="AboutMe.html">About</a>
     </li>
     <li class="nav-item">
-     <a class="nav-link" href="contact.html">Contact</a>
+     <a class="nav-link" href="resume.html">Resume</a>
      </li>
      <li class="nav-item">
       <a class="nav-link" href="Work.html">Work Gallery</a>
       </li>
       <li class="nav-item">
-       <a class="nav-link" href="Resume.html">Resume</a>
+       <a class="nav-link" href="contact.html">Contact</a>
        </li>
   </ul>
 </nav>
