--- a/AboutMe.html
+++ b/AboutMe.html
@@ -56,7 +56,7 @@
        </div>
     </div>
   </div>
-    <div class="col p-3 bg-container-fluid-1"><div class="col p-3 bg-container-fluid-1"><img src="family.jpg" class="mx-auto d-block" style="width:130%" >
+    <div class="col p-3 bg-container-fluid-1"><div class="col p-3 bg-container-fluid-1"><img src="family.jpg" class="addBorder" class="mx-auto d-block" style="width:130%" >
        </div></div>
 <div class="col p-3 bg-container-fluid-1"></div>
 </div>
@@ -82,7 +82,7 @@
    </div>
 </div>
 </div>
-<div class="col p-3 bg-container-fluid-1"><div class="col p-3 bg-container-fluid-1"><div class="col p-3 bg-container-fluid-1"><img src="mydog.jpg" class="mx-auto d-block" style="width:80%">
+<div class="col p-3 bg-container-fluid-1"><div class="col p-3 bg-container-fluid-1"><div class="col p-3 bg-container-fluid-1"><img src="mydog.jpg"  class="addBorder" class="mx-autoo d-block" style="width:80%">
    </div></div></div>
-<div class="col p-3 bg-container-fluid-1"><div class="col p-3 bg-container-fluid-1"><div class="col p-3 bg-container-fluid-1"><img src="friends.jpg" class="mx-auto d-block" style="width:0% height:35px">
+<div class="col p-3 bg-container-fluid-1"><div class="col p-3 bg-container-fluid-1"><div class="col p-3 bg-container-fluid-1"><img src="friends.jpg" class="addBorder" class="mx-auto d-block" style="width:0% height:35px">
    </div></div></div></div>
