--- a/Resume.html
+++ b/Resume.html
@@ -47,12 +47,6 @@
   </div>
   <div class="container-fluid-1">
   <div class="row">
-  <div class="col p-3 bg-container-fluid-1"></div>
-  <div class="col p-3 bg-container-fluid-1"></div>
-  <div class="col p-3 bg-container-fluid-1"></div>
-  </div>
-  <div class="container-fluid-1">
-  <div class="row">
   <div class="col p-4 bg-container-fluid-1"> <div class="card" style="width:500px">
          <div class="card-body">
            <p class="card-title"><b><u>Education</u></b></p>
@@ -75,7 +69,10 @@
   </div>
   <div class="container-fluid-1">
   <div class="row">
-  <div class="col p-3 bg-container-fluid-1"></</div>
-  <div class="col p-3 bg-container-fluid-1"></div>
-  <div class="col p-3 bg-container-fluid-1"></div>
-  </div>
+  <div class="col p-4 bg-container-fluid-1"></div>
+         <div class="container-fluid-1">
+         <div class="row">
+         <div class="col p-3 bg-container-fluid-1"></div>
+         <div class="col p-3 bg-container-fluid-1">...</div>
+         <div class="col p-3 bg-container-fluid-1"></div>
+         </div>
