--- a/AboutMe.html
+++ b/AboutMe.html
@@ -50,7 +50,7 @@
   <div class="row">
   <div class="col p-4 bg-container-fluid-1">  <div class="col-lg-4"> <div class="card" style="width:600px">
          <div class="card-body">
-           <h4 class="card-title"><b>About Me</b></h4>
+           <h4 class="card-title"><b><u>About Me</u></b></h4>
            <p class="card-text">Hello! My name is Hannah Fierro I am a highschool student going into junior year. This year I took the Web Design Year 1 course at my school. Undoubtedly my favorite part of this course is creating different designs for projects I was assigned this year. I have learned basic html, CSS and bootstrap. With learning these I was able to create sites for my projects such as, my bootstrap project for my school website, my halloween website using HTML, and a bunch of practice sites! Web Design is an amazing course and it has become my favorite class. </p>
          </div>
        </div>
@@ -76,7 +76,7 @@
 <div class="row">
 <div class="col p-4 bg-container-fluid-1"><div class="col-lg-4"> <div class="card" style="width:600px">
      <div class="card-body">
-       <h4 class="card-title"><b>More info</b></h4>
+       <h4 class="card-title"><b><u>More info</u></b></h4>
        <p class="card-text">I was born in Brooklyn, New York. I lived there for 10 years and moved about 5 years ago! I am apart of three clubs at my school unity council, phychology and drama club. I am always eager to learn new skills, last summer my dad wanted me to learn photoshop. Although, I am still a beginner, I have definitley gained more knowledge about photoshop. I have started to learn about Adobe illustrator last month and I got adjusted to using it fairly quick. My goal one day is to create websites for clients and add animations to websites.</p>
      </div>
    </div>
