--- a/Resume.html
+++ b/Resume.html
@@ -47,24 +47,20 @@
   </div>
   <div class="container-fluid-1">
   <div class="row">
-  <div class="col p-4 bg-container-fluid-1"> <div class="card" style="width:500px">
+  <div class="col p-5 bg-container-fluid-1">  <div class="col-lg-6"> <div class="card" style="width:500px">
          <div class="card-body">
            <p class="card-title"><b><u>Education</u></b></p>
-           <p class="card-text"><p>&#127979;<b> School: </b>Freehold Township High School</p>
-<p><b>Expected graduation:</b> 2024</p>
-<p><b>Relevent Course Work: </b> Web Design</p>
-<p><b>Clubs: </b> Drama Club, Unity Council, Phycology Club</p>
-<p>________________________________________________________</p>
- </p>
-           <p class="card-title"><b><u>Additional Skills</u></b></p>
-           <p class="card-text"><p>Adobe and Photoshop beginner</p>
-<p>Basic Knowledge of HTML and CSS</p>
-<p>Basic Knowledge of Bootstrap</p>
-<p><b>Language: </b> English</p>
-<p>________________________________________________________</p>
- </p>
-         </div></div>
-  <div class="col p-3 bg-container-fluid-1"></div>
+           <p class="card-text"><p>&#127979;<b> School: </b>Freehold Township High School</p> <p><b>Expected graduation:</b> 2024</p> <p><b>Relevent Course Work: </b> Web Design</p> <p><b>Clubs: </b> Drama Club, Unity Council, Phycology Club</p> <p>________________________________________________________</p> </p> <p class="card-title"><b><u>Additional Skills</u></b></p> <p class="card-text"><p>Adobe and Photoshop beginner</p> <p>Basic Knowledge of HTML and CSS</p> <p>Basic Knowledge of Bootstrap</p> <p><b>Language: </b> English</p> <p>________________________________________________________</p> </p>
+
+         </div>
+       </div>
+    </div>
+  </div>
+    <div class="col p-3 bg-container-fluid-1"><div class="col p-3 bg-container-fluid-1"><img src="Me.jpg" class="addBorder" class="mx-auto d-block" style="width:65%" >
+       </div></div>
+ <div class="col p-3 bg-container-fluid-1"></div>
+ </div>
+  <div class="col p-3 bg-container-fluid-1"><h4></h4></div>
   <div class="col p-3 bg-container-fluid-1"></div>
   </div>
   <div class="container-fluid-1">
@@ -73,6 +69,6 @@
          <div class="container-fluid-1">
          <div class="row">
          <div class="col p-3 bg-container-fluid-1"></div>
-         <div class="col p-3 bg-container-fluid-1">...</div>
+         <div class="col p-3 bg-container-fluid-1"><h4></h4></div>
          <div class="col p-3 bg-container-fluid-1"></div>
          </div>
