--- a/index.html
+++ b/index.html
@@ -57,38 +57,11 @@
 </div>
 <div class="row">
 <div class="col p-3 bg-container-fluid-1"></div>
-<div class="col p-3 bg-container-fluid-1"><h1 style="font-size:50px; color:Black;"><b>Hannah Fierro</b></h1></div>
+<div class="col p-3 bg-container-fluid-1"><h1 style="font-size:50px; color:Black;"><b><u>Hannah Fierro</u></b></h1></div>
 <div class="col p-3 bg-container-fluid-1 font-size:10em"></div>
 </div>
-  <div class="container-fluid-1">
-    <!-- Carousel -->
-    <div id="demo" class="carousel slide" data-bs-ride="carousel" style="margin:auto">
-
-      <!-- Indicators/dots -->
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-      </div>
-
-      <!-- The slideshow/carousel -->
-      <div class="carousel-inner" style="margin:auto">
-        <div class="carousel-item active ">
-          <img id="imagesdra" src="pic.png" alt="The Vampire" class="d-block" class="HW  align-items-center" style="margin:auto">
-        </div>
-        <div class="carousel-item">
-        <img id="imagesdra" src="2pic.png" alt="New Girl" class="d-block" class="HW  align-items-center" style="margin:auto">
-        </div>
-        <div class="carousel-item">
-      <img id="imagesdra" src="3pic.png" alt="Glee" class="d-block" class="HW  align-items-center" style="margin:auto">
-        </div>
-      </div>
-
-      <!-- Left and right controls/icons -->
-      <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </button
-      <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </button>
-    </div>
+<div class="row">
+<div class="col p-3 bg-container-fluid-1"></div>
+<div class="col p-3 bg-container-fluid-1"><h1 style="font-size:22px; color:Black;"><b>This is my student portfolio. Feel free to explore around my site!</b></h1></div>
+<div class="col p-3 bg-container-fluid-1 font-size:10em"></div>
+</div>
